#37 - Resolved New activity page - MCQ text area should be aligned properly, below edge should be horizontally in sync with activity link textbox and right edge should be in sync vertically with "correct?" label. Same applies to "Save activity" button. - Apply boostrap class on text area

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -189,6 +189,8 @@ body {
 
 .navbar-inverse .navbar-nav > li > a:hover {
   background-color: #00445A !important;
+  color: #FFFFFF;
+  border-color: #006B8D;
 }
 
 .score_lbl_margin_left {
